# omnigent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  openapi.json  pyproject.toml  setup.py  uv.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  reviewers
ap-web/: .prettierignore  package-lock.json  package.json  vite.config.ts
deploy/: README.md
designs/: SESSION_PROJECTS_SIDEBAR.md  contributor-review-merge-proposal.md  opencode-native-gaps.md
dev/: __init__.py
docs/: AGENT_YAML_SPEC.md  QWEN_FOLLOWUPS.md  antigravity-native-rpc-core-design.md  cursor-native-elicitation.md  cursor-native-tui-mirror-plan.md  databricks.md  kiro-native-elicitation.md
omnigent/: _native_forwarder_health.py  _native_post_delivery.py  _wrapper_labels.py  antigravity_native.py  antigravity_native_bridge.py  antigravity_native_steps.py  chat.py  claude_launcher.py  claude_native.py  claude_native_bridge.py  claude_native_forwarder.py  claude_native_hook.py  cli.py  cli_auth.py  cli_diagnostics.py  codex_native.py  codex_native_app_server.py  codex_native_forwarder.py  codex_native_hook.py  codex_native_process_registry.py  cursor_native.py  cursor_native_bridge.py  cursor_native_forwarder.py  cursor_native_permissions.py  harness_aliases.py  hermes_native_bridge.py  kimi_native_hook.py  kiro_native_bridge.py  kiro_native_permissions.py  kiro_native_session_forwarder.py  model_catalog.py  model_override.py  native_coding_agents.py  native_cost_popup.py  native_policy_hook.py  opencode_native.py  opencode_native_bridge.py  opencode_native_provider.py  pi_native_bridge.py  pi_native_resume.py  (+3 more)
scripts/: backend-smoke.sh  branch-omnigent  install_oss.sh  update.sh  update_versions.py
tests/: conftest.py  known_failures.yaml  native_hook_helpers.py  test_antigravity_native_bridge.py  (+33 more)
tests/codex_parity/sidecar/: Cargo.toml
tests/codex_parity/sidecar/src/: main.rs
web/: .npmrc  (+10 more)
(+917 files in other folders)
